# Fast_Softmax

./: AT_DISPATCH_FLOATING_TYPES.txt  CMakeLists.txt  cmake.md  tensor&Intrusive_ptr.txt
docs/: AT_DISPATCH_FLOATING_TYPES.txt  Array_memory_layout.txt  SMEM_Bank_Conflict_and_GMEM_coalesce.txt  cmake.txt  torch.tensor_impl_and_Intrusive_ptr.txt  type_conversion.txt
src/: kernels.cuh  runner.cu  runner.cuh  validation.cu
src/kernels/: softmax_kernel.cuh  softmax_kernel_2.cuh  softmax_kernel_2_SMEM_tree_reduction.cuh
